# LLV

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  a.out  animation.sh  default.sh  examples.c  generate_in_output.sh  generate_matrix_output.sh  install.sh  linked_list.c  linked_list.h  list.todo  list2gif.sh  produce_release.sh  run_tests.sh  ssc.py  test.r  test_runner.sh  uninstall.sh
bulid/: example
collection_tests/: DLL_test.c  LL_test.c  array_test.c  collection_test_helper.h  dll_test.c  list_test.c  ll_test.c  queue_test.c  stack_test.c
example/: examples.c  examples.incl
example/example_tests/: bubble_sort.1.expected.ascii_large_boxes  bubble_sort.1.expected.ascii_small_boxes  bubble_sort.1.expected.large_term_unicode  bubble_sort.1.expected.small_term_ascii  bubble_sort.1.expected.small_term_unicode  bubble_sort.1.expected.uniocde_large_boxes  dll_insert_user_large.2.expected.small_term_unicode  dll_insert_user_large.2.in  dll_insert_user_small.2.expected.ascii_large_boxes  dll_insert_user_small.2.expected.ascii_normal_boxes  dll_insert_user_small.2.expected.large_term_ascii  dll_insert_user_small.2.expected.small_term_ascii  dll_insert_user_small.2.in  reverse_standard.0.expected.ascii_normal_boxes  reverse_standard.0.expected.small_term_unicode  reverse_standard.0.expected.unicode_normal_boxes  wiki_eg1.3.expected.small_term_unicode  wiki_eg2.4.expected.ascii_small_boxes  wiki_eg2.4.expected.unicode_small_boxes  wiki_eg2.4.in  wiki_eg3.5.in
example/example_tests/expected/: bubble_sort.1.expected.ascii_large_boxes  bubble_sort.1.expected.ascii_normal_boxes  bubble_sort.1.expected.ascii_small_boxes  bubble_sort.1.expected.large_term_ascii  bubble_sort.1.expected.large_term_unicode  bubble_sort.1.expected.small_term_ascii  bubble_sort.1.expected.small_term_unicode  bubble_sort.1.expected.unicode_small_boxes  bubble_sort.1.expected.uniocde_large_boxes  dll_insert_user_large.2.expected.ascii_large_boxes  dll_insert_user_large.2.expected.ascii_normal_boxes  dll_insert_user_large.2.expected.ascii_small_boxes  dll_insert_user_large.2.expected.large_term_ascii  dll_insert_user_large.2.expected.large_term_unicode  dll_insert_user_large.2.expected.small_term_ascii  dll_insert_user_large.2.expected.small_term_unicode  dll_insert_user_large.2.expected.unicode_small_boxes  dll_insert_user_large.2.expected.uniocde_large_boxes  dll_insert_user_small.2.expected.ascii_large_boxes  dll_insert_user_small.2.expected.ascii_normal_boxes  dll_insert_user_small.2.expected.ascii_small_boxes  dll_insert_user_small.2.expected.large_term_ascii  dll_insert_user_small.2.expected.large_term_unicode  dll_insert_user_small.2.expected.small_term_ascii  dll_insert_user_small.2.expected.small_term_unicode  dll_insert_user_small.2.expected.unicode_small_boxes  dll_insert_user_small.2.expected.uniocde_large_boxes  reverse_standard.0.expected.ascii_large_boxes  reverse_standard.0.expected.ascii_normal_boxes  reverse_standard.0.expected.ascii_small_boxes  reverse_standard.0.expected.large_term_ascii  reverse_standard.0.expected.large_term_unicode  (+36 more)
examples/: examples.c  examples.incl
include/: helper.h  llv.h
include/collections/: Array.h  DLL.h  LL.h  Queue.h  array.h  dll.h  list.h  ll.h  ll_structs.h  queue.h  stack.h  vector.h
include/types/: collection_skeleton.h  shared_types.h
lib/: obsidian.h
output_tests/: array_too_small.c  array_too_small_2.c  dll_too_small.c  dll_too_small.expected.unicode_normal_boxes  dll_too_small_2.c  exampleBubbleSort.c  exampleBubbleSort.expected.ascii_large_boxes  exampleBubbleSort.expected.ascii_normal_boxes  exampleBubbleSort.expected.ascii_small_boxes  exampleBubbleSort.expected.large_boxes  exampleBubbleSort.expected.large_term_ascii  exampleBubbleSort.expected.large_term_unicode  exampleBubbleSort.expected.small_term_ascii  exampleBubbleSort.expected.small_term_unicode  exampleBubbleSort.expected.unicode  exampleBubbleSort.expected.unicode_normal_boxes  exampleBubbleSort.expected.uniocde_large_boxes  exampleBubbleSort.result  exampleDLLAppend.c  exampleDLLAppend.expected.ascii_large_boxes  exampleDLLAppend.expected.ascii_normal_boxes  exampleDLLAppend.expected.ascii_small_boxes  exampleDLLAppend.expected.large_term_ascii  exampleDLLAppend.expected.large_term_unicode  exampleDLLAppend.expected.small_term_ascii  exampleDLLAppend.expected.small_term_unicode  exampleDLLAppend.expected.unicode_large_boxes  exampleDLLAppend.expected.unicode_normal_boxes  exampleReverseTest.c  exampleReverseTest.expected  exampleReverseTest.expected.ascii_large_boxes  exampleReverseTest.expected.ascii_normal_boxes  exampleReverseTest.expected.ascii_small_boxes  exampleReverseTest.expected.large_boxes  exampleReverseTest.expected.large_term_ascii  exampleReverseTest.expected.large_term_unicode  exampleReverseTest.expected.small_term_ascii  exampleReverseTest.expected.small_term_unicode  exampleReverseTest.expected.unicode  exampleReverseTest.expected.unicode_large_boxes  (+13 more)
output_tests/expected/: array_too_small.expected.large_term_ascii  ll_too_small.expected.ascii_small_boxes  queue_too_small_2.expected.large_term_unicode  stack_too_small_2.expected.small_term_unicode
src/: array_helper.c  array_helper.h  collection_helper.c  collection_helper.h  env_var.c  env_var.h  env_var.incl  general_collection_helper.c  general_collection_helper.h  helper.c  helper.h  list_helper.c  list_helper.h  llv.c  llv.h  obsidian.h
src/collections/: Array.c  DLL.c  DLL.h  LL.c  LL.h  Queue.c  README.md  Stack.c  Vector.c  array.c  dll.c  dll.h  list.c  ll.c  queue.c  stack.c  vector.c
src/types/: README.md  shared_types.c  shared_types.h
test_matrix/: ascii_large_boxes.sh  ascii_normal_boxes.sh  ascii_small_boxes.sh  large_boxes.sh  large_term_ascii.sh  large_term_unicode.sh  small_term_ascii.sh  small_term_unicode.sh  unicode.sh  unicode_normal_boxes.sh  unicode_small_boxes.sh  uniocde_large_boxes.sh
(+1 files in other folders)
